--- a/Sesion 26-04/promise.html
+++ b/Sesion 26-04/promise.html
@@ -7,7 +7,7 @@
     <script src="promise.js"></script>
 </head>
 <body>
-    <h1>La concha</h1>
-    <button onclick="instructor(continuar)">blablabla</button>
+    <h1>Hello World!</h1>
+    <button onclick="instructor()">Button</button>
 </body>
 </html>
